<resources>
    <string name="app_name">Keys</string>
    <string name="dash">-</string>
    <string name="new_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signUp">Sign Up</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="properties">Properties</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_set_property_photo">Set property image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="having_trouble_get_help">Having Trouble? Get Help</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="busy">Busy</string>
    <string name="default_property_address">Parmenionos 3 (Opposite Kings Avenue Mall Philippou Court shop 1–2 Paphos, 8045, Cyprus</string>
    <string name="default_property_name">Jewel Villa at Javania Coral</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="help">Having Trouble? Get Help</string>
    <string name="update">Update</string>
    <string name="loading">Loading…</string>
    <string name="add_property">Add Property</string>
    <string name="name">Name</string>
    <string name="address" translatable="true">Address</string>
    <string name="add_key">Add Key</string>
    <string name="searchHint">Name or Address</string>
    <string name="search">Search…</string>
    <string name="filters">Filters</string>
    <string name="haven_t_received_the_code_click_here_to_resend">Haven’t received the code? Click here to resend</string>
    <string name="delete">Delete</string>
    <string name="available">Available</string>
    <string name="add_new_key">ADD NEW KEY</string>
    <string name="remember">Remember</string>
    <string name="maps_key">uznpzwz1exjqRuDIRSGUASUIzFoLAB08</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="key_is_available">Key is available</string>
    <string name="tap_on_qr_code_to_scan_the_key">Tap on QR code to scan the key.</string>
    <string name="print_qrcode">Share to pring the current QRCode to be used in keyring.</string>
    <string name="nothing_s_happened_yet">Nothing\'s happened yet</string>
    <string name="nothing_s_happened_yet_description">When there\'s activity on properties, this is where we\'ll let you know.</string>
    <string name="no_property_found">No property found</string>
    <string name="trash_is_empty">Trash is empty</string>
    <string name="trash">Trash</string>
    <string name="long_rent">Long Rent</string>
    <string name="short_rent">Short Rent</string>
    <string name="sales">Sales</string>
    <string name="apply">Apply</string>
    <string name="users">Users</string>
    <string name="admin">Admin</string>
    <string name="keybox">Key Box</string>
    <string name="office">Office</string>
    <string name="location">Location</string>
    <string name="purpose">Purpose</string>
    <string name="building">Building</string>
    <string name="apartment">Apartment</string>
    <string name="postbox">Postbox</string>
    <string name="meter_cabinet">Meter Cabinet</string>
    <string name="cleaning">Cleaning</string>
    <string name="other">Other</string>
    <string name="external_partner">External Partner</string>
    <string name="maintenance">Maintenance</string>
    <string name="viewing">Viewing</string>
    <string name="inspection">Inspection</string>
    <string name="reason">Reason</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="estimated_check_in_date">Estimated Check In Date</string>
    <string name="share">Share</string>
    <string name="update_estimated_check_out_date">Update Estimated Check Out Date</string>
    <string name="generate_report">Generate Report</string>
    <string name="total_checked_in">Total Checked In</string>
    <string name="checked_in_today">Checked In Today</string>
    <string name="total_checked_out">Total Checked Out</string>
    <string name="checked_out_today">Checked Out Today</string>
    <string name="check_out_reasons">Check Out Reasons</string>
    <string name="period">Period</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="custom">Custom</string>
    <string name="custom_period">Custom Period</string>
    <string name="today">Today</string>
    <string name="google_email_address">Google Email</string>
    <string name="google_email">Google Email</string>
    <string name="role">Role</string>
</resources>