<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationDashboard"
            android:background="@color/colorWhite"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/navigationHistory"
            android:background="@color/colorWhite"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/navigationNotifications"
            android:icon="@drawable/notification"
            android:background="@color/colorWhite"
            android:title="@string/notifications" />
        <item
            android:id="@+id/navigationLogout"
            android:background="@color/colorWhite"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>