<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/period"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:checkedButton="@+id/today">

        <RadioButton
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/today"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/week"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/month"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/customPeriod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/custom"
            app:useMaterialThemeColors="true" />
    </RadioGroup>
</LinearLayout>