<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/propertyDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <include layout="@layout/property" />

    <TextView
        android:id="@+id/checkedInByUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="3"
        android:text="Checked in by: Nikolaos Papadopoulos"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/checkedInDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="3"
        android:text="Checked date: 2020/12/12"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reasonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/purpose"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        android:visibility="visible" />

    <RadioGroup
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:checkedButton="@+id/cleaning"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/cleaning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cleaning"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/inspection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inspection"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/viewing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/viewing"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/maintenance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maintenance"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/externalPartner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/external_partner"
            app:useMaterialThemeColors="true" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/other"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customReason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>