<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkInOutDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/checkInOutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            android:theme="@style/ToolbarDialog"
            app:menu="@menu/submit_menu"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/check_in"
            app:titleTextColor="@color/white_50" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/propertyDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <include layout="@layout/property" />

                <TextView
                    android:id="@+id/checkedInByUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="3"
                    android:text="Checked in by: "
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/checkedInDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="3"
                    android:text="Checked date: "
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/estimated_check_in_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/estimatedCheckInDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/reasonLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/reason"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checkedButton="@+id/cleaning"
                    android:visibility="visible">

                    <RadioButton
                        android:id="@+id/cleaning"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cleaning"
                        app:useMaterialThemeColors="true" />

                    <RadioButton
                        android:id="@+id/inspection"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/inspection"
                        app:useMaterialThemeColors="true" />

                    <RadioButton
                        android:id="@+id/viewing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/viewing"
                        app:useMaterialThemeColors="true" />

                    <RadioButton
                        android:id="@+id/maintenance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/maintenance"
                        app:useMaterialThemeColors="true" />

                    <RadioButton
                        android:id="@+id/externalPartner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/external_partner"
                        app:useMaterialThemeColors="true" />

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/other"
                        app:useMaterialThemeColors="true" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customReason"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:visibility="gone"
                    app:counterEnabled="true"
                    app:counterMaxLength="50">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>